# neucalog

./: CMakeLists.txt  analyse.py  main.cc
include/: ActionInitialization.hh  AnalysisManager.hh  CrystalHit.hh  CrystalSD.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: run.mac
src/: ActionInitialization.cc  AnalysisManager.cc  CrystalHit.cc  CrystalSD.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
